--- a/index.html
+++ b/index.html
@@ -122,10 +122,22 @@
 
                 <div class="space-y-4">
                     <div class="flex gap-2 items-center">
-                        <div class="flex-1">
-                            <label class="text-[9px] text-gray-400 uppercase font-bold">Kategori</label>
-                            <input type="text" value="Plastik PET" class="w-full p-2.5 border border-blue-100 rounded text-xs text-gray-600 focus:border-green-400 outline-none">
-                        </div>
+                       <div class="flex-1 text-left">
+    <label class="text-[9px] text-gray-400 uppercase font-bold tracking-widest ml-1">Kategori Sampah</label>
+    <div class="relative">
+        <select class="w-full p-2.5 border border-blue-100 rounded-xl text-xs text-gray-600 focus:border-green-400 outline-none appearance-none bg-white cursor-pointer shadow-sm">
+            <option value="" disabled selected>Pilih Kategori</option>
+            <option value="PLASTIK">PLASTIK (HDPE)</option>
+            <option value="KERTAS">PLASTIK (PET)</option>
+          
+        </select>
+        <div class="absolute inset-y-0 right-3 flex items-center pointer-events-none opacity-30">
+            <svg class="h-3 w-3 fill-current" viewBox="0 0 20 20">
+                <path d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" />
+            </svg>
+        </div>
+    </div>
+</div>
                         <div class="w-32">
                             <label class="text-[9px] text-gray-400 uppercase font-bold">Berat (Kg)</label>
                             <input type="text" placeholder="Contoh: 2.5" class="w-full p-2.5 border border-blue-100 rounded text-xs text-gray-600 focus:border-green-400 outline-none">
@@ -137,10 +149,21 @@
                         </button>
                     </div>
                     <div class="flex gap-2 items-center">
-                        <div class="flex-1">
-                            <label class="text-[9px] text-gray-400 uppercase font-bold">Kategori</label>
-                            <input type="text" placeholder="Pilih Kategori" class="w-full p-2.5 border border-blue-100 rounded text-xs text-gray-600 focus:border-green-400 outline-none">
-                        </div>
+                       <div class="flex-1 text-left">
+    <label class="text-[9px] text-gray-400 uppercase font-bold tracking-widest ml-1">Kategori Sampah</label>
+    <div class="relative">
+        <select class="w-full p-2.5 border border-blue-100 rounded-xl text-xs text-gray-600 focus:border-green-400 outline-none appearance-none bg-white cursor-pointer shadow-sm">
+            <option value="" disabled selected>Pilih Kategori</option>
+            <option value="PLASTIK">PLASTIK (HDPE)</option>
+            <option value="KERTAS">PLASTIK (PET)</option>
+        </select>
+        <div class="absolute inset-y-0 right-3 flex items-center pointer-events-none opacity-30">
+            <svg class="h-3 w-3 fill-current" viewBox="0 0 20 20">
+                <path d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" />
+            </svg>
+        </div>
+    </div>
+</div>
                         <div class="w-32">
                             <label class="text-[9px] text-gray-400 uppercase font-bold">Berat (Kg)</label>
                             <input type="text" placeholder="Contoh: 2.5" class="w-full p-2.5 border border-blue-100 rounded text-xs text-gray-600 focus:border-green-400 outline-none">
